# client_server_einkaufsliste

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPLEXITY.md  DEVELOPER.md  DOCKER.md  Dockerfile  README.md  RECIPE_FEATURES.md  VERSIONING.md  WEBSOCKET-DEBUG.md  analyze_logic.py  check_api.py  check_dates.py  check_products.py  check_recipe.py  check_users.py  check_weekplan.py  data.db  debug_template.py  diagnose-network.ps1  docker-compose.dockerhub.yml  docker-compose.yml  pyproject.toml  start-server.ps1
.github/: COMMIT_CONVENTION.md
.github/workflows/: auto-release.yml  ci.yml  docker-publish.yml  release.yml
client/: .gitignore  ARCHITECTURE.md  README.md  STATE_LAYER.md  complexity-report.md  datepicker-demo.html  debug-print-css.html  debug-print-full.html  debug-print.html  index-app.html  index-backup.html  index-login.html  index-products.html  index-stores.html  index-templates.html  index-units.html  index-users.html  index-webdav.html  index-weekplan.html  index.html  jest.config.js  package-lock.json  package.json  run-complexity.js  styles.css  tsconfig.json  websocket-debug.html
client/src/: api.test.ts  api.ts  app.html  dom.test.ts  dom.ts  index-login.test.ts  index-login.ts  script-backup.ts  script-products.test.ts  script-products.ts  script-stores.test.ts  script-stores.ts  script-templates.ts  script-units.ts  script-users.test.ts  script-users.ts  script-webdav.ts  script-weekplan.ts  script.test.ts  script.ts  units-admin.html  version.json
client/src/data/: api.test.ts  api.ts  auth.test.ts  auth.ts  dom.test.ts  dom.ts  inactivity-tracker.ts  websocket.test.ts  websocket.ts
client/src/pages/: app.html  backup.html  login.html  login.test.ts  login.ts  products.html  stores.html  templates.html  units.html  users.html  webdav.html  weekplan.html
client/src/state/: product-admin-state.ts  shopping-list-state.test.ts  shopping-list-state.ts  store-admin-state.ts  store-state.test.ts  store-state.ts  template-admin-state.ts  units-admin-state.ts  user-state.test.ts  user-state.ts  webdav-admin-state.ts  weekplan-preferences.ts  weekplan-state.ts
docs/: COMMIT_CONVENTION.md  COMPLEXITY.md  DEVELOPER.md  DOCKER.md  DOCKER_BUILD.md  DOCKER_COMPOSE.md  DOCKER_README.md  FEATURES.md  INDEX.md  QUICKSTART.md  RELEASES.md  VERSIONING.md  WEBSOCKET-DEBUG.md
docs/client/: ARCHITECTURE.md  README.md  STATE_LAYER.md  complexity-report.md
docs/server/: DATABASE_SCHEMA.md  complexity-report.md
scripts/: update-version.ps1
server/: DATABASE_SCHEMA.md  __init__.py  run-complexity.py
server/migrations/: 001_add_units_table.py  002_add_entry_type_and_template_id.py  003_add_manufacturer_to_product.py  add_person_count_to_template.py  migrate_add_recipe_id.py
server/src/: __init__.py  admin_setup.py  app.py  app_state.py  auth.py  db.py  main.py  models.py  schemas.py  seed_data.py  user_cleanup.py  user_models.py  utils.py  version.py  websocket_manager.py
server/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_stores.py  test_user_management.py  test_utils.py  test_weekplan.py
(+235 files in other folders)
